@@ -339,7 +339,7 @@ typedef struct lan91cxx_priv_data {
 
 #include CYGDAT_DEVS_ETH_SMSC_LAN91CXX_INL
 
-#ifdef LAN91CXX_32BIT_RX
+#ifdef CYGSEM_DEVS_ETH_SMSC_LAN91CXX_USE_32BIT
 typedef cyg_uint32 rxd_t;
 #else
 typedef cyg_uint16 rxd_t;
@@ -406,7 +406,7 @@ get_data(struct eth_drv_sc *sc)
     struct lan91cxx_priv_data *cpd =
         (struct lan91cxx_priv_data *)sc->driver_private;
 	
-#ifdef LAN91CXX_32BIT_RX
+#ifdef CYGSEM_DEVS_ETH_SMSC_LAN91CXX_USE_32BIT
     HAL_READ_UINT32(cpd->base+((LAN91CXX_DATA_HIGH & 0x7) << cpd->addrsh), val);
 #else
     HAL_READ_UINT16(cpd->base+((LAN91CXX_DATA & 0x7) << cpd->addrsh), val);
